--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Transparent proxy implementing SMART content-type translation",
   "author": "Josh Mandel <joshua.mandel@childrens.harvard.edu>",
   "scripts":{
-   "start": "node ./launch.js"
+    "start": "node ./launch.js"
+  },
+  "browser": {
+    "./request": false,
+    "./jsonld": false
   },
   "dependencies": {
     "restler": "*",
@@ -20,7 +24,7 @@
     "mocha":"*",
     "should":"*",
     "node-uuid":"*",
-		"underscore":"*",
+    "underscore":"*",
     "jade": "*",
     "ejs": "*",
     "passport":"*",
@@ -29,7 +33,9 @@
     "oauth2orize":"*",
     "stylus": "*",
     "mongoose": "*",
-    "winston": "*"
+    "winston": "*",
+    "xmldom": "*",
+    "request": "*"
   },
   "devDependencies": {
   },
