--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "browser": {
     "./request": false,
-    "./jsonld": false
+    "../jsonld": false,
+    "xmldom": false
   },
   "dependencies": {
     "restler": "*",
